--- a/django_girls.html
+++ b/django_girls.html
@@ -28,10 +28,12 @@
                     <h1>Code for Poznan </h1>
                     <h3>Django Girls presentation</h3>
                     <h4>24.06.2017, Poznań</h4>
-                </section>   
+                </section>
                 <section>
                     <section>
-                        <h1>Code for Poznań</h1>
+                        <h1>
+                            <img src="img/logo_code_for_poznan.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
                     </section>
                         <section>
                         <h2>Mission</h2>
@@ -39,15 +41,28 @@
                         </section>
                 </section>
                 <section>
-                    <h1>Volontulo</h1>
+                    <section>
+                        <h1>Volontulo</h1>
+                    </section>
+                            <section>
+                                <img src="img/volontulo.png" style="background:none; border:none; box-shadow:none; "/>
+                            </section>
+                    </section>
                 </section>
                 <section>
-                    <h1>Future</h1>
+                    <section>
+                        <h1>Future</h1>
+                    </section>
+                            <section>
+                                <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
+                            </section>
+                    </section>
                 </section>
                 <section>
                     <h1>Questions?</h1>
                     <h5 class="fragment">Thank you for your attention</h2>
                     <h5 class="fragment"><a href="mailto:wojciech.patelka@gmail.com">wojciech.patelka@gmail.com</a></h2>
+                    <h5 class="fragment"><a href="https://github.com/CodeForPoznan">https://github.com/CodeForPoznan</a></h3>
                 </section>
             </div>
         </div>
