fixes after review

--- a/django_girls.html
+++ b/django_girls.html
@@ -25,8 +25,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <h1>Code for Poznan </h1>
-                    <h3>Django Girls presentation</h3>
+                    <h3>Django Girls</h3>
                     <h4>24.06.2017, Poznań</h4>
                 </section>
                 <section>
@@ -36,13 +35,13 @@
                         </h1>
                     </section>
                         <section>
-                        <h2>Mission</h2>
+                        <h2>Misja</h2>
                         <p class="fragment">Technologiczne rozwiązania społecznych problemów</p>
                         </section>
                 </section>
                 <section>
                     <section>
-                        <h1>Volontulo</h1>
+                        <h1>Projekty</h1>
                     </section>
                             <section>
                                 <img src="img/volontulo.png" style="background:none; border:none; box-shadow:none; "/>
@@ -51,7 +50,7 @@
                 </section>
                 <section>
                     <section>
-                        <h1>Future</h1>
+                        <h1>Przyszłość</h1>
                     </section>
                             <section>
                                 <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
@@ -59,10 +58,11 @@
                     </section>
                 </section>
                 <section>
-                    <h1>Questions?</h1>
-                    <h5 class="fragment">Thank you for your attention</h2>
-                    <h5 class="fragment"><a href="mailto:wojciech.patelka@gmail.com">wojciech.patelka@gmail.com</a></h2>
+                    <h1>Pytania?</h1>
+                    <h5 class="fragment">Dziękuję za uwagę.</h2>
+                    <h5 class="fragment"><a href="mailto:wojciech.patelka@gmail.com">hello@codeforpoznan.pl</a></h2>
                     <h5 class="fragment"><a href="https://github.com/CodeForPoznan">https://github.com/CodeForPoznan</a></h3>
+                    <h5 class="fragment"><a href="www.codeforpoznan.pl">codeforpoznan.pl</a>
                 </section>
             </div>
         </div>
