--- a/django_girls.html
+++ b/django_girls.html
@@ -55,14 +55,20 @@
                             <section>
                                 <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
                             </section>
+                            <section>
+                                <img src="img/streetmix.png" style="background:none; border:none; box-shadow:none; "/>
+                            </section>
+                            <section>
+                                <img src="img/bank_empatii.png" style="background:none; border:none; box-shadow:none; "/>
+                            </section>
                     </section>
                 </section>
                 <section>
                     <h1>Pytania?</h1>
-                    <h5 class="fragment">Dziękuję za uwagę.</h2>
-                    <h5 class="fragment"><a href="mailto:wojciech.patelka@gmail.com">hello@codeforpoznan.pl</a></h2>
+                    <h5 class="fragment">Dziękuję za uwagę</h2>
+                    <h5 class="fragment"><a href="mailto:hello@codeforpoznan.pl">hello@codeforpoznan.pl</a></h2>
                     <h5 class="fragment"><a href="https://github.com/CodeForPoznan">https://github.com/CodeForPoznan</a></h3>
-                    <h5 class="fragment"><a href="www.codeforpoznan.pl">codeforpoznan.pl</a>
+                    <h5 class="fragment"><a href="http://codeforpoznan.pl">http://codeforpoznan.pl</a>
                 </section>
             </div>
         </div>
