--- a/5minutes.html
+++ b/5minutes.html
@@ -28,8 +28,8 @@
                     <section>
                         <h1>
                             <img src="img/logo_code_for_poznan.png" style="background:none; border:none; box-shadow:none; "/>
-                            <h3>Django Girls</h3>
-                            <h4>24.06.2017, Poznań</h4>
+                            <h3>PyLadies.start()</h3>
+                            <h4>23-24.10.2017, Poznań</h4>
                         </h1>
                     </section>
                         <section>
