--- a/5minutes.html
+++ b/5minutes.html
@@ -28,8 +28,8 @@
                     <section>
                         <h1>
                             <img src="img/logo_code_for_poznan.png" style="background:none; border:none; box-shadow:none; "/>
-                            <h3>Rails Girls</h3>
-                            <h4>29-30.09.2017, Poznań</h4>
+                            <h3>Girls.js</h3>
+                            <h4>03-04.03.2018, Poznań</h4>
                         </h1>
                     </section>
                         <section>
@@ -52,21 +52,39 @@
                     </section>
                             <section>
                                 <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
+                                <a href="http://wysadzulice.pl">http://wysadzulice.pl</a>
                             </section>
                             <section>
                                 <img src="img/streetmix.png" style="background:none; border:none; box-shadow:none; "/>
+                                <a href="https://streetmix.net">https://streetmix.net</a>
                             </section>
                             <section>
                                 <img src="img/bank_empatii.png" style="background:none; border:none; box-shadow:none; "/>
+                                <a href="http://bankempatii.pl">http://bankempatii.pl</a>
                             </section>
                     </section>
                 </section>
                 <section>
+                    <section>
+                        <h1>Kiedy? Gdzie?</h1>
+                    </section>
+                    <section>
+                        <img src="img/spotkanie.jpg"  style="background:none; border:none; box-shadow:none; ">
+                    </section>
+                    <section>
+                        <h2>Spotkania</h2>
+                        <p class="fragment">Spotkamy się w każdą środę</p>
+                        <p class="fragment">Godzina 17:00</p>
+                        <p class="fragment">STX Next</p>
+                        <p class="fragment">Morawskiego 12</p>
+                    </section>
+                </section>
+                <section>
                     <h1>Pytania?</h1>
-                    <h5 class="fragment">Dziękuję za uwagę</h2>
+                    <h5 class="fragment">Dziękujemy za uwagę</h2>
                     <h5 class="fragment"><a href="mailto:hello@codeforpoznan.pl">hello@codeforpoznan.pl</a></h2>
                     <h5 class="fragment"><a href="https://github.com/CodeForPoznan">https://github.com/CodeForPoznan</a></h3>
-                    <h5 class="fragment"><a href="http://codeforpoznan.pl">http://codeforpoznan.pl</a>
+                    <h5 class="fragment"><a href="https://codeforpoznan.pl">https://codeforpoznan.pl</a>
                 </section>
             </div>
         </div>
