--- a/5minutes.html
+++ b/5minutes.html
@@ -73,7 +73,7 @@
                     </section>
                     <section>
                         <h2>Spotkania</h2>
-                        <p class="fragment">Spotkamy się w każdą środę</p>
+                        <p class="fragment">Każda środa</p>
                         <p class="fragment">Godzina 17:00</p>
                         <p class="fragment">STX Next</p>
                         <p class="fragment">Morawskiego 12</p>
