--- a/5minutes.html
+++ b/5minutes.html
@@ -28,8 +28,8 @@
                     <section>
                         <h1>
                             <img src="img/logo_code_for_poznan.png" style="background:none; border:none; box-shadow:none; "/>
-                            <h3>Girls.js</h3>
-                            <h4>03-04.03.2018, Poznań</h4>
+                            <h3>Django Girls Workshop #2</h3>
+                            <h4>25-26.08.2018, Poznań</h4>
                         </h1>
                     </section>
                         <section>
@@ -43,6 +43,11 @@
                     </section>
                             <section>
                                 <img src="img/volontulo.png" style="background:none; border:none; box-shadow:none; "/>
+                                <a href="http://volontuloapp.org/o">http://volontuloapp.org/o</a>
+                            </section>
+                            <section>
+                                <img src="img/streetmix.png" style="background:none; border:none; box-shadow:none; "/>
+                                <a href="https://streetmix.net">https://streetmix.net</a>
                             </section>
                     </section>
                 </section>
@@ -53,10 +58,6 @@
                             <section>
                                 <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
                                 <a href="http://wysadzulice.pl">http://wysadzulice.pl</a>
-                            </section>
-                            <section>
-                                <img src="img/streetmix.png" style="background:none; border:none; box-shadow:none; "/>
-                                <a href="https://streetmix.net">https://streetmix.net</a>
                             </section>
                             <section>
                                 <img src="img/bank_empatii.png" style="background:none; border:none; box-shadow:none; "/>
