--- a/5minutes.html
+++ b/5minutes.html
@@ -28,7 +28,7 @@
                     <section>
                         <h1>
                             <img src="img/logo_code_for_poznan.png" style="background:none; border:none; box-shadow:none; "/>
-                            <h3>Django Girls Poznań #2</h3>
+                            <h3>Django Girls Workshops</h3>
                             <h4>25-26.08.2018, Poznań</h4>
                         </h1>
                     </section>
