Fix closing tags on the last slide

--- a/5minutes.html
+++ b/5minutes.html
@@ -82,10 +82,10 @@
                 </section>
                 <section>
                     <h1>Pytania?</h1>
-                    <h5 class="fragment">Dziękujemy za uwagę</h2>
-                    <h5 class="fragment"><a href="mailto:hello@codeforpoznan.pl">hello@codeforpoznan.pl</a></h2>
-                    <h5 class="fragment"><a href="https://github.com/CodeForPoznan">https://github.com/CodeForPoznan</a></h3>
-                    <h5 class="fragment"><a href="https://codeforpoznan.pl">https://codeforpoznan.pl</a>
+                    <h5 class="fragment">Dziękujemy za uwagę</h5>
+                    <h5 class="fragment"><a href="mailto:hello@codeforpoznan.pl">hello@codeforpoznan.pl</a></h5>
+                    <h5 class="fragment"><a href="https://github.com/CodeForPoznan">https://github.com/CodeForPoznan</a></h5>
+                    <h5 class="fragment"><a href="https://codeforpoznan.pl">https://codeforpoznan.pl</a></h5>
                 </section>
             </div>
         </div>
