Add second photo. Presentation update.

--- a/5minutes.html
+++ b/5minutes.html
@@ -28,8 +28,6 @@
                     <section>
                         <h1>
                             <img src="img/logo_code_for_poznan.png" style="background:none; border:none; box-shadow:none; "/>
-                            <h3>Programuj Dziewczyno!</h3>
-                            <h4>13.03.2019, Poznań</h4>
                         </h1>
                     </section>
                         <section>
@@ -81,11 +79,14 @@
                         <img src="img/spotkanie.jpg"  style="background:none; border:none; box-shadow:none; ">
                     </section>
                     <section>
+                        <img src="img/spotkanie_2.jpg"  style="background:none; border:none; box-shadow:none; ">
+                    </section>
+                    <section>
                         <h2>Spotkania</h2>
                         <p class="fragment">Każda środa</p>
-                        <p class="fragment">Godzina 17:00</p>
+                        <p class="fragment">Godzina 18:00</p>
                         <p class="fragment">STX Next</p>
-                        <p class="fragment">Morawskiego 12</p>
+                        <p class="fragment">Mostowa 38</p>
                     </section>
                 </section>
                 <section>
