Onboarding presentation placeholder

--- a/onboarding.html
+++ b/onboarding.html
@@ -26,13 +26,26 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <h1>
-                        <img src="img/code_for_poznan_line.png" style="background:none; border:none; box-shadow:none; "/>
-                    </h1>
-                    <ul>
-                        <li><a href="/meetups.html">meetups</a></li>
-                        <li><a href="/onboarding.html">onboarding</a></li>
-                    </ul>
+                    <section>
+                        <h1>
+                            <img src="img/code_for_poznan_square.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>Soft introduction</h1>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>Tech introduction</h1>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>Team introduction</h1>
+                    </section>
                 </section>
             </div>
         </div>
@@ -44,11 +57,10 @@
             // - https://github.com/hakimel/reveal.js#configuration
             // - https://github.com/hakimel/reveal.js#dependencies
             Reveal.initialize({
-                hash: true,
                 dependencies: [
                     { src: 'plugin/markdown/marked.js' },
                     { src: 'plugin/markdown/markdown.js' },
-                    { src: 'plugin/highlight/highlight.js' },
+                    { src: 'plugin/highlight/highlight.js'},
                     { src: 'plugin/notes/notes.js', async: true }
                 ]
             });
