--- a/tech_introduction.html
+++ b/tech_introduction.html
@@ -26,14 +26,25 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <h1>
-                        <img src="img/code_for_poznan_line.png" style="background:none; border:none; box-shadow:none; "/>
-                    </h1>
-                    <ul>
-                        <li><a href="soft_introduction.html">soft introduction</a></li>
-                        <li><a href="tech_introduction.html">tech introduction</a></li>
-						<li><a href="team_introduction.html">team introduction</a></li>
-                    </ul>
+                    <section>
+                        <h1>
+                            <img src="img/code_for_poznan_square.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>
+                            <img src="img/tech_introduction1.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
+                    </section>
+                </section>
+				<section>
+                    <section>
+                        <h1>
+                            <img src="img/tech_introduction2.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
+                    </section>
                 </section>
             </div>
         </div>
@@ -45,11 +56,10 @@
             // - https://github.com/hakimel/reveal.js#configuration
             // - https://github.com/hakimel/reveal.js#dependencies
             Reveal.initialize({
-                hash: true,
                 dependencies: [
                     { src: 'plugin/markdown/marked.js' },
                     { src: 'plugin/markdown/markdown.js' },
-                    { src: 'plugin/highlight/highlight.js' },
+                    { src: 'plugin/highlight/highlight.js'},
                     { src: 'plugin/notes/notes.js', async: true }
                 ]
             });
