Updated presentations with two main sections: soft introduction and tech introduction.
In soft introduction changed the order of projects and added new projects - watchdog and strong spolecznosci.
In tech introduction, added two sections of tech things.

--- a/tech_introduction.html
+++ b/tech_introduction.html
@@ -34,17 +34,16 @@
                 </section>
                 <section>
                     <section>
-                        <h1>Soft introduction</h1>
+                        <h1>
+                            <img src="img/tech_introduction1.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
                     </section>
                 </section>
                 <section>
                     <section>
-                        <h1>Tech introduction</h1>
-                    </section>
-                </section>
-                <section>
-                    <section>
-                        <h1>Team introduction</h1>
+                        <h1>
+                            <img src="img/tech_introduction2.png" style="background:none; border:none; box-shadow:none; "/>
+                        </h1>
                     </section>
                 </section>
             </div>
