--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                         <img src="img/code_for_poznan_line.png" style="background:none; border:none; box-shadow:none; "/>
                     </h1>
                     <ul>
-                        <li><a href="/meetups.html">meetups</a></li>
-                        <li><a href="/onboarding.html">onboarding</a></li>
+                        <li><a href="meetups.html">meetups</a></li>
+                        <li><a href="soft_introduction.html">soft introduction</a></li>
+                        <li><a href="tech_introduction.html">tech introduction</a></li>
                     </ul>
                 </section>
             </div>
