Adding onboarding agenda
Fixes #25

--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -31,6 +31,17 @@
                             <img src="img/code_for_poznan_square.png" style="background:none; border:none; box-shadow:none; "/>
                         </h1>
                     </section>
+                </section>
+                <section>
+                    <h2>Agenda</h2>
+                    <ul>
+                        <li>Projekty/li>
+                        <li>Procesy</li>
+                        <li>Technologie</li>
+                        <li>Zespoły projektowe</li>
+                    </ul>
+                </section>
+                <section>
                     <section>
                         <h2>Misja</h2>
                         <p class="fragment">Technologiczne rozwiązania społecznych problemów</p>
