--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -35,7 +35,7 @@
                 <section>
                     <h2>Agenda</h2>
                     <ul>
-                        <li>Projekty/li>
+                        <li>Projekty</li>
                         <li>Procesy</li>
                         <li>Technologie</li>
                         <li>Zespoły projektowe</li>
