--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -66,6 +66,61 @@
                 <section>
                     <img src="img/pah.png" style="background:none; border:none; box-shadow:none; "/>
                     PAH FM
+                    <aside class="notes">
+                        <p>Aplikacja mobilna dla Polskiej Akcji Humanitarnej</p>
+                        <p>Zadania:</p>
+                        <ul>
+                            <li>zarządzanie flotą samochodową na misjach</li>
+                            <li>digitalizacja danych o przejazdach, potrzebnych są do rozliczenia
+                                kierowców:
+                                <ul>
+                                    <li>kilometraż</li>
+                                    <li>litry zatankowanego paliwa</li>
+                                    <li>projekt w którym rozliczony ma być przejazd</li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <p>Dane te, do tej pory zbierane były w wersji papierowej.</p>
+                        <p>Wyzwanie:</p>
+                        <ul>
+                            <li>działanie offline</li>
+                        </ul>
+                        <p>Pilotaż:</p>
+                        <ul>
+                            <li>Ukraina</li>
+                            <li>Sudan Południowy</li>
+                            <li>Somalia</li>
+                        </ul>
+                        <p>Przyszłość:</p>
+                        <ul>
+                            <li>Jemen</li>
+                            <li>Irak</li>
+                        </ul>
+                        <p>Aplikacja działa obecnie w dwóch wersjach:</p>
+                        <ul>
+                            <li>Aplikacja dla kierowcy:
+                                <ul>
+                                    <li>zbieranie danych o pojedynczym przejeździe</li>
+                                    <li>przesyłanie danych do bazy danych w Django Adminie</li>
+                                </ul>
+                            <li>Aplikacja dla pasażera:</li>
+                                <ul>
+                                    <li>generowanie 6-cyfrowego tokenu - potwierdzenie/weryfikacja przejazdu</li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <p>Aktualne prace skupiają się na:</p>
+                        <ul>
+                            <li>zbudowanie panelu do obsługi tankowań</li>
+                            <li>zbudowanie backendu do aplikacji pasażera</li>
+                        </ul>
+                        <p>Technologia:</p>
+                        <ul>
+                            <li>Django na serwerze</li>
+                            <li>Vue w przeglądarce</li>
+                            <li>Postgress SQL w bazie</li>
+                        </ul>
+                    </aside>
                 </section>
                 <section>
                     <img src="img/alinka.png" style="background:none; border:none; box-shadow:none; "/>
