Dodanie opisu do Banku Empatii (#34)

--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -148,6 +148,15 @@
                 <section>
                     <img src="img/bank_empatii.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="http://bankempatii.pl">http://bankempatii.pl</a>
+
+                    <aside class="notes">
+                        <ul>
+                            <li>Strona powstała 4 lata temu w celu rozpowszechnienia kwestii dawstwa szpiku kostnego.</li>
+                            <li>W tym przypadku chodziło o znalezienie dawcy dla Patrycji.</li>
+                            <li>Strona jest prostym landing pagem</li>
+                        </ul>
+                    </aside>
+
                 </section>
                 <section>
                     <h1>WORKFLOW</h1>
