Opis do Volontulo (#35)

--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -140,6 +140,24 @@
                 <section>
                     <img src="img/volontulo.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="https://dev.volontulo.pl/">https://dev.volontulo.pl/</a>
+
+                    <aside class="notes">
+                        <p>Projekt zamrożony.</p>
+                        <p>Przerwany z powodu braku zainteresowania dalszym rozwojem aplikacji i responsywności klienta</p>
+                        <p>Powstał dla WRK (Poznańskie Centrum Wspierania Organizacji Pozarządowych i Wolontariatu/WRK)</p>
+                        <p>Opis:</p>
+                        <ul>
+                            <li>Market space dla wolontariuszy i organizacji, które wolontariuszy poszukują.</li>
+                            <li>Działa na zasadzie pracuj.pl - organizacje wrzucają ogłoszenia z opisem wolontariatu, wolontariusze znajdują dzięki stronie odpowiednie dla siebie miejsce.</li>
+                        </ul>
+                        <p>Strona może zostać wykorzystana jako baza/szkielet dla innego projektu.</p>
+                        <p>Można poszukać też innego klienta zainteresowanego technologią.</p>
+                        <p>Technologia:</p>
+                        <ul>
+                            <li>Frontend - Angular</li>
+                            <li>Backend - Django</li>
+                        </ul>
+                    </aside>
                 </section>
                 <section>
                     <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
