--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -134,10 +134,20 @@
                         <p>
                             Sieć obywatelska WATCHDOG Polska to stowarzyszenie które działa już od 2003 roku.
                             Stoją na straży prawa do informacji publicznej w naszym kraju. Informacja to jedno z praw obywatela, które daje prawidzwą wolność w wyrażaniu swoich opinii i chroni nas przed nadużyciami wadzy.
-                            Wachtdog to taki pies, tylko że zamiast szczekać- pyta, a jak  mu się coś nie spodoba to zamiast gryźć- idzie do sądu.
+                            Wachtdog to taki pies, który zamiast szczekać - pyta, kiedy mu się coś nie podoba, nie gryzie, tylko idzie do sądu.
                             Nasze instytucje publiczne działąja na zasadach nawyków, czyli prawo sobie a zwyczaj sobie. Zależy nam aby przełamać te nieprawidłowo utarte schematy.
-                            Pytania kierowane są do urzędów, samorządów, gmin, administracji, szpitali itp. Jawność i transparentność organizacji będzię zawsze działała na korzyść społeczeństwa.
-                            Dodatkowo gromadzą, analizują i prezentują przydatną wiedzę na swoich portalach i w mediach. A na koniec edukują społeczeństwo o prawach, uczą jak monitorować i docierać do wiedzy oraz danych w określonym obszarze.
+                        </p>
+                        <p>
+                            Pytania kierowane są do urzędów, samorządów, gmin, administracji, szpitali itp.
+                        </p>
+                        <p>
+                            Jawność i transparentność organizacji będzię zawsze działała na korzyść społeczeństwa.
+                        </p>
+                        <p>
+                            Dodatkowo gromadzą, analizują i prezentują przydatną wiedzę na swoich portalach i w mediach.
+                        </p>
+                        <p>
+                            Na koniec edukują społeczeństwo o prawach, uczą jak monitorować i docierać do wiedzy oraz danych w określonym obszarze.
                         </p>
                         <p>
                             Aplikacja służy do usprawnienia obiegu dokumentów Stowarzyszenia, w szczególności w zakresie obiegu korespondencji spraw sądowych oraz archiwizacji dokumentacji.
