Added script for codeforpoznan.pl and wysadzulice.pl

--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -133,6 +133,23 @@
                 <section>
                     <img src="img/StronaSpolecznosci.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="https://codeforpoznan.pl/">https://codeforpoznan.pl/</a>
+                    <aside class="notes">
+                        <p>Wraz z rozwojem naszej społeczności wzrastają nasze wewnętrzne potrzeby jak organizacji. Trzecia wersja strony nad którą aktualnie pracujemy ma realizować kilka zadań. Po pierwsze jest to miejsce do komunikacji stowarzyszenia z nowymi wolontariuszami, organizacjami non-profit. Po drugie ma to być miejsce wspierające codzienną pracę aktualnych członków. Mamy tutaj dwa aspekty, kontaktu wewnątrz organizacji oraz  ze światem zewnętrznym.
+                        Strona składa się z dwóch części, widocznej która służy do kontaktu z interesariuszami. Jest ot część do której każdy ma dostęp. Jest w stanie z niej dowiedzieć się potrzebnych informacji. Pod spodem jest to cześć w której zbieramy narzędzia do rozwiązywania problemów, optymalizacji procesów czy wzajemnej pomocy w organizacji. Plan jest taki aby ta wewnętrzna część strony stała się czymś na wzór intranetu.</p>
+                        <p>Aktualne prace dążą do:</p>
+                        <ul>
+                            <li>Stworzenia strony w nowej wersji – nr. 3</li>
+                            <li>Logowania/wylogowania za pomocą tokena</li>
+                            <li>Stworzenia formularza kontaktowego dla nowych członków  lub instytucji zainteresowanych współpracą</li>
+                            <li>Rozszerzenia funkcjonalności po „drugiej stronie”</li>
+                        </ul>
+                        <p>Technologia:</p>
+                        <ul>
+                            <li>Frontend - Vue - framework JavaScript</li>
+                            <li>Backend - framework Pythona</li>
+                            <li>Baza danych -PostGres SQL</li>
+                        </ul>
+                    </aside>
                 </section>
                 <section>
                     <h1>Przyszłość</h1>
@@ -140,7 +157,6 @@
                 <section>
                     <img src="img/volontulo.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="https://dev.volontulo.pl/">https://dev.volontulo.pl/</a>
-
                     <aside class="notes">
                         <p>Projekt zamrożony.</p>
                         <p>Przerwany z powodu braku zainteresowania dalszym rozwojem aplikacji i responsywności klienta</p>
@@ -162,11 +178,14 @@
                 <section>
                     <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="http://wysadzulice.pl">http://wysadzulice.pl</a>
+                    <aside class="notes">
+                        <p> Wysadź ulice jest projektem wspołtworzonym z Koduj dla Polski. Jest to platforma, która ma na celu wspomaganie mieszkańców w projektowaniu i modernizacji ich najbliższego otoczeania. Dzięki tej stronie można zaprojektować otaczającą nas przetrzeń poprzez jej wizualizację. W prosty sposób można dodać ławkę do siedzenia czy klomb kwiatów.
+                        Dzięki wysadzulice.pl lokalni społecznicy mogą prowadzić dialog z władzami miasta i mieć wpływ na kształt otaczającego nas środowiska. W tym celu wystarczy wykonać zdjęcie lub pobrać z google street i ulepszczać najbliższą okolicę</p>
+                    </aside>
                 </section>
                 <section>
                     <img src="img/bank_empatii.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="http://bankempatii.pl">http://bankempatii.pl</a>
-
                     <aside class="notes">
                         <ul>
                             <li>Strona powstała 4 lata temu w celu rozpowszechnienia kwestii dawstwa szpiku kostnego.</li>
@@ -174,7 +193,6 @@
                             <li>Strona jest prostym landing pagem</li>
                         </ul>
                     </aside>
-
                 </section>
                 <section>
                     <h1>WORKFLOW</h1>
